好像是把包能发出去了

--- a/doc/数据包的序列化与反序列化.md
+++ b/doc/数据包的序列化与反序列化.md
@@ -1,6 +1,8 @@
 数据包的序列化与反序列化
 ====================
 
+![](ffsplit_overview.png)             
+
 ## 关于 TLD 数据类型
 
 数据将统统被序列化成统一的 **TLD** 的紧凑二进制格式。 
@@ -14,7 +16,7 @@
      E0 00 C9 12 87 2D ...
            |<------->|
                | 
-           4 个字节表示长度，可以用一个 uint16 来表示它
+           4 个字节表示长度，可以用一个 uint32 来表示它
 
 根据这个格式， TLD 的 **"D"** 当然也可以包含嵌套一个或多个TLD，从而形成嵌套
 
