--- a/doc/数据包的序列化与反序列化.md
+++ b/doc/数据包的序列化与反序列化.md
@@ -27,6 +27,7 @@
  E0 | 表示数据为一个 AVCodecContext
  F0 | 表示数据为一个 AVPacket 结构
 
+
 ## AVCodecContext 的序列化
 
 对与 *E0* 的数据，它的 Data 段结构为:
@@ -50,6 +51,8 @@
     #----------------------------------------------------------------------
     E6    # rc_override  : RcOverride * : 必须长度是 
           #                         rc_override_count * sizeof(RcOverride)
+    #----------------------------------------------------------------------
+    EF    # 自己对应的视频流的 stream_index
 
 
 
